Private-AKS-Cluster/Resources/virtual-service.yaml
# vserv.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: istio-system
  
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /  # Match all URIs
      #rewrite:
      #  uri: /  # Rewrite to root
      route:
        - destination:
            host: nginx.nginx.svc.cluster.local
            port:
              number: 80
